# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c.yml
src/: benchmark.c  benchmark.h  colours.c  colours.h  display.c  display.h  main.c  player.c  player.h  vector.c  vector.h
